# lynx

./: .gitignore  Cargo.toml  README.md  build.rs  build_mac.sh  create_release.sh
.github/workflows/: release.yml  rust.yml
src/: app.rs  info.plist  mac.rs  main.rs  sound.rs  theme.rs  ui_components.rs
