[package]
name = "lynx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "*"
eframe = "0.14.0"
serde = { version = "1", features = ["derive"], optional = true }
structopt = "0.3"

[features]
default = ["persistence"] # save state by default
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown


[profile.dev]
debug = 1
split-debuginfo = "unpacked"