[package]
name = "lynx"
version = "0.1.16"
edition = "2018"
license = "MIT"
authors = ["Johann Woelper <woelper@gmail.com>"]
repository = "https://github.com/woelper/lynx"
description = "A minimalistic audio player"

[package.metadata.bundle]
name = "lynx"
identifier = "com.github.woelper.lynx"
icon = ["src/logo.png"]

[dependencies]
# rodio = "*"
eframe = "0.14.0"
serde = { version = "1", features = ["derive"], optional = true }
structopt = "0.3"
anyhow = "1.0.44"
kira = {version = "0.5.3", features = ["serde_support"]}
audiotags = "0.2.7182"
walkdir = "2.3.2"
log = "0.4.14"
env_logger = "0.9.0"
static_vcruntime = "1.1"

[target.'cfg(target_os = "macos")'.dependencies]
fruitbasket = { git = "https://github.com/woelper/fruitbasket", branch = "open-file-support" }

[features]
default = ["persistence"] # save state by default
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
incremental = true
lto = true
codegen-units = 1

[profile.dev]
debug = 1
split-debuginfo = "unpacked"
incremental = true
opt-level = 1
